tests/ui/borrowck/format-args-temporary-scopes.e2021.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/format-args-temporary-scopes.rs:33:64
   |
LL |     println!("{:?}{:?}", (), if true { std::convert::identity(&format!("")) } else { "" });
   |                              ----------------------------------^^^^^^^^^^^---------------
   |                              |                                 |            |
   |                              |                                 |            temporary value is freed at the end of this statement
   |                              |                                 creates a temporary value which is freed while still in use
   |                              borrow later used here
   |
   = note: consider using a `let` binding to create a longer lived value
   = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0716`.
